--- a/app/src/main/res/drawable/shape_oval.xml
+++ b/app/src/main/res/drawable/shape_oval.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+       android:shape="oval">
 
     <gradient android:startColor="#ccddee"
               android:endColor="#33ddee"
               android:centerColor="#eedd33"
               android:angle="90"
-        android:centerX="0.4"
-        android:centerY="0.4"
-        android:type="linear"></gradient>
+              android:centerX="0.4"
+              android:centerY="0.4"
+              android:type="linear"></gradient>
     <stroke android:color="#aaaaaa"
             android:width="1dp"></stroke>
-    <corners android:radius="5dp"></corners>
 </shape>
