--- a/app/src/main/res/layout/activity_shape.xml
+++ b/app/src/main/res/layout/activity_shape.xml
@@ -12,7 +12,22 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_height="match_parent"
-        android:layout_width="150dp">
+        android:layout_width="150dp"
+        android:weightSum="1">
+
+        <TextView
+            android:text="Oval"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/textView4"
+            style="@style/shape_oval_bkg"/>
+
+        <TextView
+            android:text="Line"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/textView"
+            style="@style/shape_line_bkg"/>
 
         <TextView
             android:text="Rectangle"
@@ -26,7 +41,8 @@
             android:layout_width="match_parent"
             android:id="@+id/textView3"
             style="@style/shape_ring_bkg"
-            android:layout_height="100dp"/>
+            android:layout_height="57dp"
+            android:layout_weight="0.32"/>
     </LinearLayout>
 
 </LinearLayout>
